# TianGuan13

./: .gitignore  AGENTS.md  README.md  README.zh-Hans.md  area.html  atom.html  client.html  datum.html  flake.nix  global.html  image.html  index.html  matrix.html  mob.html  modular_nova.html  modular_tianguan.html  obj.html  particles.html  procpath.html  tgstation.dme  tolgee.config.ts  turf.html  world.html
_maps/: safehouses.html  virtual_domains.html
area/: space.html
atom/: movable.html
code/: __DEFINES.html  __byond_version_compat.html  _compile_options.html  world.html
config/: admins.txt  config.txt  game_options.txt
datum/: aas_config_entry.html  abductor_gear.html  achievement_data.html  achievement_report.html  action.html  action_group.html  actionspeed_modifier.html  active_bet.html  addiction.html  admin_ai_template.html  admin_book_viewer.html  admin_help.html  admin_help_tickets.html  admin_message.html  admin_rank.html  admin_verb.html  admins.html  adventure.html  ai_laws.html  (+523 more)
tools/i18n/: Cargo.toml  README.md  build-verbs-zh.sh  coverage.mjs  dm_labels.json  identifier-baseline.txt  miss-scan.mjs  pseudo-scan.mjs  pseudo-test.sh  resync.sh  suppress-reorder.mjs  sync-upstream.sh  tgui-catalog.mjs
tools/i18n/lobby-buttons/: gen_dmi.py  readme.md
tools/i18n/mt/: .env.example  glossary-sync.ts  glossary.zh-Hans.json  i18n-mt.ts  keep-english.zh-Hans.json  translate-codex.sh  translate.ts
tools/i18n/src/: catalog.rs  dm_string.rs  extract.rs  flavor.rs  keys.rs  labels.rs  lint.rs  main.rs  migrate.rs  pseudo.rs  rewrite.rs  template.rs
(+10772 files in other folders)
